[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doris-vector-search"
version = "0.0.5"
description = "Doris Vector Search Python SDK"
readme = "README.md"
dependencies = [
    "mysql-connector",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["doris_vector_search"]
